--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                         <div class="heading fade-in">
                             <h1>An Olympic Odessy of Medals and Metrics</h1>
                             <h4>A Data-Driven Dive into the Olympics</h4>
+                            <p style="font-size: 18px;">✍️ by Meredith Lu and 👩‍💻 by Tina Ge</p>
                         </div>
                     <!-- </div>    -->
                 </div>
@@ -102,8 +103,7 @@
 
             <p>
                 The alternative medal tables below track countries’ Olympic performances not only by their
-                total medal haul but also by taking into account their gross domestic product (GDP) and
-                population size.
+                total medal haul but also by taking into account their gross domestic product (GDP) per capita.
             </p>
 
             <p>
@@ -122,7 +122,7 @@
             </p>
 
             <p>
-                While GDP alone doesn’t directly influence an athlete’s performance, it serves as an indicator
+                While GDP per capita alone doesn’t directly influence an athlete’s performance, it serves as an indicator
                 of factors that do. In wealthy countries, people have more financial resources to support
                 professional athletes and more time to dedicate to leisure activities, resulting in improved
                 sports infrastructure and more effective training opportunities.
@@ -133,7 +133,7 @@
             <div id="viz2"></div>
             <p class="caption">Numerous factors can influence a country’s performance at the Olympics, including
                 economic resources, population size, government investment, sports culture, and tradition.
-                This graph examines the relationship between a country’s Gross Domestic Product (GDP) and
+                This graph examines the relationship between a country’s Gross Domestic Product (GDP) per capita and
                 its total medals won in the Summer Olympics from 1960 to 2020, shedding light on how
                 economic factors may impact Olympic success.</p>
         </div>
@@ -148,7 +148,7 @@
 
             <p>
                 Meanwhile, clustered in the top left of the graph above are Scandinavian nations such as
-                Switzerland, Sweden, and Norway, indicating their high GDP but relatively modest
+                Switzerland, Sweden, and Norway, indicating their high GDP per capita but relatively modest
                 performance in the Summer Games. But their Winter Games performance, not depicted in
                 the graph, tells a different story, as these countries excel in this arena.
             </p>
@@ -216,10 +216,9 @@
 
         <div class="graphBox3">
             <div id="viz3"></div>
-            <p class="caption">This graph offers a unique perspective on Olympic success, where each circle
-                represents a country and its size corresponds to the value of their total gold medal count
-                across all Summer Olympic Games per capita. The graph allows us to uncover the nations
-                that excel in producing Olympic champions relative to their population size.</p>
+            <p class="caption">
+                This graph offers a unique perspective on Olympic success, where each circle represents a country and its size corresponds to the value of their total gold medal count across all Summer Olympic Games per capita. The graph allows us to uncover the nations that excel in producing Olympic champions relative to their population size. Users can hover over the circles to see the country names and their weighted Olympic performance. 
+            </p>
         </div>
 
         <div class="articleWrapper"> 
@@ -273,7 +272,7 @@
                 profits for the host country. An analysis of economic factors from 1964 to 2020 reveals a
                 different picture. The accompanying graph illustrates the financial outcomes, with green
                 indicating profit and red representing loss. The intensity of the shade indicates the magnitude
-                of the financial gain or loss experienced by each host country.</p>
+                of the financial gain or loss experienced by each host country. Users can hover over a country to see details of its profit or loss. </p>
         </div>
 
         <div class="articleWrapper"> 
@@ -305,6 +304,10 @@
         </div>
 
         <div class="graphBox5">
+            <!-- <div id="buttons-container" style="text-align: center;">
+                <button id="revenueBtn">Revenue</button>
+                <button id="costBtn">Costs</button>
+            </div> -->
             <div id="viz5"></div>
             <p class="caption">The graph shows the financial revenue and costs for hosting countries from 1964 to
                 2020. The green line indicates revenue and the red represents costs.</p>
@@ -368,10 +371,9 @@
             </p>
         </div>
 
-        <p class="caption specific-caption">This graph visually represents the countries that have hosted the Olympics multiple times,
-            with each country’s flag indicating the number of times it has served as a host. Users can use
-            the filters on the left to display countries that have rehosted any Olympics, only the Winter
-            Olympics, or only the Summer Olympics.</p>
+        <p class="caption specific-caption">
+            This graph visually represents the countries that have hosted the Olympics, with each country’s flag indicating the number of times it has served as a host. 
+        </p>
 
         <div class="graphBox6">
             <!-- <img src="assets/16pic_7185893_b.jpg" alt=""> -->
@@ -518,7 +520,7 @@
             </p>
             
             <br>
-            <p style="text-align: center; font-style: italic; font-size: 18px;">Written by Meredith Lu and designed by Tina Ge</p>
+            <!-- <p style="text-align: center; font-style: italic; font-size: 18px;">Written by Meredith Lu and designed by Tina Ge</p> -->
         </div>        
         
     </div>
