--- a/index.html
+++ b/index.html
@@ -387,8 +387,11 @@
                         geographical distribution of host countries. Since the inception of the modern Olympics in
                         1896, the majority of Games have been held in
                         <span id="EuropeString" style="cursor: pointer;"><u><b>🔗 Europe</b></u></span> (30 editions) and 
-                        <span id="AmericasString" style="cursor: pointer;"><u><b>🔗 North America</b></u> (12
-                        editions), with eight Games in Asia and two in Oceania. Rio de Janeiro made history as South
+                        <span id="AmericasString" style="cursor: pointer;"><u><b>🔗 North America</b></u></span> (12
+                        editions), with eight Games in 
+                        <span id="AsiaString" style="cursor: pointer;"><u><b>🔗 Asia</b></u></span>
+                        and two in 
+                        <span id="OceaniaString" style="cursor: pointer;"><u><b>🔗 Oceania</b></u></span>. Rio de Janeiro made history as South
                         America’s first Olympic host city when it welcomed the 2016 Summer Olympics. Africa has
                         yet to host an Olympic Games.
                     </p> 
