--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <!-- <div class="fade-in"> -->
                         <img src="rings.svg" alt="SVG Image" class="fade-in">
                         <div class="heading fade-in">
-                            <h1>An Olympic Odessy of Medals and Metrics</h1>
+                            <h1>An Olympic Odyssey of Medals and Metrics</h1>
                             <h4>A Data-Driven Dive into the Olympics</h4>
                             <p style="font-size: 18px;">✍️ by Meredith Lu and 👩‍💻 by Tina Ge</p>
                         </div>
