--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="articleWrapper">    
             <p id="firstParagraph">
                 The 1952 Summer Olympic Games in Helsinki, Finland was held in a bruised world: The Cold
-                War was underway, Germany was divided, and Chairman Mao had taken control of China..
+                War was underway, Germany was divided, and Chairman Mao had taken control of China.
                 But a ray of hope emerged from the games: Team Jamaica, consisting of eight athletes, won
                 five medals, topping the medal table by team size.
             </p>
