--- a/index.html
+++ b/index.html
@@ -533,12 +533,12 @@
     <!-- <div class="tooltip"></div> -->
 
     <!-- <script type="module" src="script0.js"></script> -->
-    <script type="module" src="script1.js"></script>
-    <script type="module" src="script2.js"></script>
-    <script type="module" src="script3.js"></script>
-    <script type="module" src="script4.js"></script>
-    <script type="module" src="script5.js"></script>
-    <script type="module" src="script6.js"></script>
-    <script type="module" src="script7.js"></script>
+    <script type="module" src="/scripts/script1.js"></script>
+    <script type="module" src="/scripts/script2.js"></script>
+    <script type="module" src="/scripts/script3.js"></script>
+    <script type="module" src="/scripts/script4.js"></script>
+    <script type="module" src="/scripts/script5.js"></script>
+    <script type="module" src="/scripts/script6.js"></script>
+    <script type="module" src="/scripts/script7.js"></script>
 </body>
 </html>
