--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="viz0-stickyBox">
                 <div class="image-container">
                     <!-- <div class="fade-in"> -->
-                        <img src="rings.svg" alt="SVG Image" class="fade-in">
+                        <img src="/pictures/rings.svg" alt="SVG Image" class="fade-in">
                         <div class="heading fade-in">
                             <h1>An Olympic Odyssey of Medals and Metrics</h1>
                             <h4>A Data-Driven Dive into the Olympics</h4>
