--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="viz0-stickyBox">
                 <div class="image-container">
                     <!-- <div class="fade-in"> -->
-                        <img src="/pictures/rings.svg" alt="SVG Image" class="fade-in">
+                        <img src="pictures/rings.svg" alt="SVG Image" class="fade-in">
                         <div class="heading fade-in">
                             <h1>An Olympic Odyssey of Medals and Metrics</h1>
                             <h4>A Data-Driven Dive into the Olympics</h4>
@@ -533,12 +533,12 @@
     <!-- <div class="tooltip"></div> -->
 
     <!-- <script type="module" src="script0.js"></script> -->
-    <script type="module" src="/scripts/script1.js"></script>
-    <script type="module" src="/scripts/script2.js"></script>
-    <script type="module" src="/scripts/script3.js"></script>
-    <script type="module" src="/scripts/script4.js"></script>
-    <script type="module" src="/scripts/script5.js"></script>
-    <script type="module" src="/scripts/script6.js"></script>
-    <script type="module" src="/scripts/script7.js"></script>
+    <script type="module" src="scripts/script1.js"></script>
+    <script type="module" src="scripts/script2.js"></script>
+    <script type="module" src="scripts/script3.js"></script>
+    <script type="module" src="scripts/script4.js"></script>
+    <script type="module" src="scripts/script5.js"></script>
+    <script type="module" src="scripts/script6.js"></script>
+    <script type="module" src="scripts/script7.js"></script>
 </body>
 </html>
