Edit graph 7's caption

--- a/public/index.html
+++ b/public/index.html
@@ -448,9 +448,8 @@
         <p class="caption specific-caption">
             Gender equality is never easily achieved, especially in the Olympics participation.
             This dynamic graph offers a historical overview of gender participation in the Summer
-            Olympics, with male athletes represented in blue and female athletes in pink. Users can
-            interact with a slider to explore the evolution of male and female participation across
-            different Olympic Games.
+            Olympics, with male athletes represented in blue and female athletes in pink. Each dot 
+            represents 10 athletes.
         </p>
 
         <div class="graphBox7">
