Add date and fix numbers

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                         <div class="heading fade-in">
                             <h1>An Olympic Odyssey of Medals and Metrics</h1>
                             <h4>A Data-Driven Dive into the Olympics</h4>
-                            <p>✍️ by Meredith Lu and 👩‍💻 by Tina Ge</p>
                         </div>
                     <!-- </div>    -->
                 </div>
@@ -30,7 +29,9 @@
             </div> 
         </div>
 
-        <div class="articleWrapper">    
+        <div class="articleWrapper">   
+            <p>✍️ Meredith Lu (May '24) and 👩‍💻 Tina Ge (Dec '24) </p> 
+            <p> May 11, 2024 </p>
             <p id="firstParagraph">
                 The 1952 Summer Olympic Games in Helsinki, Finland was held in a bruised world: The Cold
                 War was underway, Germany was divided, and Chairman Mao had taken control of China.
@@ -47,7 +48,7 @@
             <p>
                 What's more, although the price tag of $13.2 billion for Rio de Janeiro to host the 2016
                 Olympics resulted in protests about wasteful spending and a misallocation of resources,
-                London actually spent almost two billion more as host city four years prior.
+                London actually spent almost $2 billion more as host city four years prior.
             </p>
 
             <p>
@@ -537,7 +538,7 @@
             <p>
                 "We have never been in such a favorable position," he told 
                 <a href="https://www.scmp.com/sport/other-sport/article/3260806/interest-hosting-olympic-games-never-so-high-says-international-olympic-committee-boss-thomas-bach" target="_blank">AFP</a>
-                in an April interview, "We
+                in an April interview. "We
                 have never seen such a high interest in hosting the Olympic Games."
             </p>
             
